more notes and some fixes on web local script

--- a/notes/2022-04-17.md
+++ b/notes/2022-04-17.md
@@ -1,5 +1,12 @@
 
 - Resuming after some delay (unfortunate)
 - [Export not including non-resource files](https://godotengine.org/qa/47956/export-not-including-non-resource-files)
+- I will just add some docs regarding manually copying-over the configuration files
+- [terminate simple python server wont shut down with ctrl + C](https://stackoverflow.com/questions/19757049/terminate-simple-python-server-wont-shut-down-with-ctrl-c)
+- [How do I shut down a python simpleHTTPserver?](https://stackoverflow.com/questions/12647196/how-do-i-shut-down-a-python-simplehttpserver)
+- [The localhost still keep working after stop Python SimpleHTTPServer](https://stackoverflow.com/questions/41073541/the-localhost-still-keep-working-after-stop-python-simplehttpserver)
+- Ohhhhh I hate this so much. Firefox "caches" the game even after the port is closed. This is going to make debugging *such* a pain, damnit!
+- [Prevent Firefox from caching localhost?](https://stackoverflow.com/questions/48027593/prevent-firefox-from-caching-localhost)
+- "Hard Refresh" with `ctrl+f5`
 
 
