update notes with more info; add settings.json loading and error checking; add basic star comments; add loader class (empty)

--- a/notes/2022-04-07.md
+++ b/notes/2022-04-07.md
@@ -58,9 +58,12 @@
 - It has been a few years since I did this in Godot, so I should practice doing it again
 
 ## Discussions
-- [ ] [Importing user assets at runtime](https://godotforums.org/discussion/20788/importing-user-assets-at-runtime)
-- [ ] [Is it possible to import OBJ models at runtime?](https://www.reddit.com/r/godot/comments/de4a31/is_it_possible_to_import_obj_models_at_runtime/)
-- [ ] [Loading model files at runtime #24768](https://github.com/godotengine/godot/issues/24768)
+- [x] [Importing user assets at runtime](https://godotforums.org/discussion/20788/importing-user-assets-at-runtime) (Not applicable? Do not use `.OBJ`'s, looks like they are a real nuisance to manage)
+- [x] [Is it possible to import OBJ models at runtime?](https://www.reddit.com/r/godot/comments/de4a31/is_it_possible_to_import_obj_models_at_runtime/) (Done reading)
+- [x] [Loading model files at runtime #24768](https://github.com/godotengine/godot/issues/24768)
+  - Moving changes to Godot 4.0, but links to some Godot 3.4 compatible plugins
+  - [ ] [VRM Importer and MToon Shader - Humanoid 3d Avatar Model Format](https://godotengine.org/asset-library/asset/964)
+    - [ ] [(source) godot-gltf](https://github.com/V-Sekai/godot-gltf-module/)
 
 ## Searches
 - [ ] [google: godot engine stylish ui](https://www.google.com/search?q=godot+engine+stylish+ui&sxsrf=APq-WBusqKYs_NMQt89likyO1Z--z-UWrQ%3A1649364402417&ei=sk1PYqWMGcmrptQP16efQA&ved=0ahUKEwilrb6a6YL3AhXJlYkEHdfTBwgQ4dUDCA0&uact=5&oq=godot+engine+stylish+ui&gs_lcp=Cgdnd3Mtd2l6EAMyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEdKBAhBGABKBAhGGABQAFgAYL25BWgAcAJ4AIABAIgBAJIBAJgBAMgBCMABAQ&sclient=gws-wiz)
