--- a/notes/2022-04-17.md
+++ b/notes/2022-04-17.md
@@ -8,5 +8,7 @@
 - Ohhhhh I hate this so much. Firefox "caches" the game even after the port is closed. This is going to make debugging *such* a pain, damnit!
 - [Prevent Firefox from caching localhost?](https://stackoverflow.com/questions/48027593/prevent-firefox-from-caching-localhost)
 - "Hard Refresh" with `ctrl+f5`
-
+- [GDScript basics](https://docs.godotengine.org/en/stable/tutorials/scripting/gdscript/gdscript_basics.html)
+- [How to parse a JSON file I wrote myself.](https://godotengine.org/qa/8291/how-to-parse-a-json-file-i-wrote-myself)
+- [File paths in Godot projects](https://docs.godotengine.org/en/stable/tutorials/io/data_paths.html)
 
