add dictionary printer helper; add additional debug triggers

--- a/notes/2022-04-07.md
+++ b/notes/2022-04-07.md
@@ -69,4 +69,9 @@
 - [ ] [google: godot engine stylish ui](https://www.google.com/search?q=godot+engine+stylish+ui&sxsrf=APq-WBusqKYs_NMQt89likyO1Z--z-UWrQ%3A1649364402417&ei=sk1PYqWMGcmrptQP16efQA&ved=0ahUKEwilrb6a6YL3AhXJlYkEHdfTBwgQ4dUDCA0&uact=5&oq=godot+engine+stylish+ui&gs_lcp=Cgdnd3Mtd2l6EAMyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEcyBAgAEEdKBAhBGABKBAhGGABQAFgAYL25BWgAcAJ4AIABAIgBAJIBAJgBAMgBCMABAQ&sclient=gws-wiz)
 - [ ] [youtube: godot engine stylish ui](https://www.youtube.com/results?search_query=godot+engine+stylish+ui)
 
+## Applying Textures
+- [ ] [How can I apply a texture to a mesh at runtime?](https://godotengine.org/qa/85388/how-can-i-apply-a-texture-to-a-mesh-at-runtime)
+- [ ] [Loading resources at runtime?](https://www.reddit.com/r/godot/comments/rcnpu5/loading_resources_at_runtime/)
+- [ ] [How to import an image file and set it as a texture while in-game](https://stackoverflow.com/questions/66076763/how-to-import-an-image-file-and-set-it-as-a-texture-while-in-game)
+
 
