WARN INVALID STATE; many script changes; more notes; rearrange some files

--- a/notes/2022-04-18.md
+++ b/notes/2022-04-18.md
@@ -1,5 +1,5 @@
 
-- Trouble Accessing the Deployment Settings
+## Trouble Accessing the Deployment Settings
 - This is turning into more of an annoyance than I thought
 - `user://` (which is where I intended to put `settings.json`) is *not* the deployment-location of the final "app"
 - Instead it is a local-data folder (which, tbf, is probably wiser than some folder in `Program Files`)
@@ -51,5 +51,30 @@ var StarViewerSettings = {
 - also added a `semantics` key because I realized tracking the version of this config and other stuff is hard to predict in advance and may be potentially useful in the future
 - (yes, it is using embedded-json notation)
 - [Printing JSON Dictionary in JavaScript](https://stackoverflow.com/questions/18928558/printing-json-dictionary-in-javascript)
+- Tried moving this to `deployments/dev/index.html` inside a `<script>` tag, will need to investigate hTML templates for Godot
+- [Allow scripts marked with class_name to use their class within the script without causing a cyclic dependency #25252](https://github.com/godotengine/godot/issues/25252)
 
+## UI Redesign
+- The `UsersStarScreen` and `SearchScreen` should be parented under the `StarView`
+- What is the distinction between the `StarView` and `StarViewer`?
+- True, one does seem to be more oriented around handling UI, whereas the other might be more interested in holding certain settings
+- But why not collapse them into the same entity?
+- Also consider moving the folder-location of these scenes to make more sense
 
+## Misc Todo
+- move helper functions to `Utility.gd`
+- rename `settings.gd` to `App.gd`
+- move `app/concepts/setting/App.gd` to `app/`
+- reformat `app/ui/` to `app/`
+
+## Singletons
+- question does there even need to be a `settings.gd` singleton?
+- consider that the only person really accessing this stuff so far is `StarViewer`
+- does anyone else really need to use this?
+- maybe these should be held by `StarViewer` itself, but let settings handle the loading
+
+## Who Should Handle the Networking
+- Should the `Star` or the `Settings` handle model/texture networking?
+- And who should handle `UserStars` networking?
+- Should all networking be handled by `Settings`?
+- Or should `UserSearch` handle its networking and `Star` handle its networking?
