much folder reorganization and notetaking

--- a/notes/2022-04-18.md
+++ b/notes/2022-04-18.md
@@ -78,3 +78,64 @@ var StarViewerSettings = {
 - And who should handle `UserStars` networking?
 - Should all networking be handled by `Settings`?
 - Or should `UserSearch` handle its networking and `Star` handle its networking?
+
+## Resource Folder Names
+- I like Python's conventions for a lot of things
+- However
+- I do like to use dots and dashes in the names of files (which is a big no-no in Python)
+- Otherwise, I find myself preferring lowercase-only (no-caps) and underscore-separators (as opposed to no-separators)
+- And I do this for function names
+- and yet, in python, I like to PascalCase the class names
+- and I did so for the scene files in Godot (`.tscn`) yet not for the script files (`.gd`) or folder files (`/`)
+- (I would also use PascalCase for the top-level-node-name (scenes) and `class_name` (scripts))
+- what is appropriate to do?
+- snake-case everything?
+- pascal-case everything?
+- scene-generic-scripts
+	- (a minority of scripts)
+	- (scripts that can be instantiated on their own)
+	- (receive their own `class_name` (in PascalCase))
+- scene-specific-scripts
+	- (a majority of scripts so far)
+	- (scripts that need to be directly attached to a specific scene)
+	- (do *not* receive their own `class_name`)
+- will there ever be a time when a scene file is not PascalCased?
+- and here's a better question, why are node-names within the scene-tree defaulted to pascal-case?
+	- it sure seems strange of godot to suggest using snake_case so often and then abandon it within its own scenes
+	- maybe it's because the nodes are "new" and have not been "integrated" into the rest of the scene yet?
+		- if that were the case, why not give them a default generic name, as opposed to their literal type?
+			- may be hard to determine the *role* of some node within a scene
+	- kebab-case should not be used in a scene?
+		- (dollar-sign access would suggest so, although this is a *major* antipattern)
+			- it's also extremely limited, can't grab parents
+	- should snake_case be used then?
+		- should there be some distinction between "Single" items and multiple items?
+			- Just like how "Singleton" ("Autoload") scripts are Capitalized to indicate only one exists
+			- Should scenes that only get instantiated once within a scene be Capitalized by default?
+- Custom Script Classes (with a `class_name`) now appear under the "Create New Node" menu under the item that they extend
+	- this is good behavior but means that the script filename does not matter
+		- so is there an impetus to keep these PascalCase?
+- adopting extreme case
+	- All files are to be snake_case, no exceptions
+	- *internally*, `class_name` and top-level-node should be PascalCase
+
+## Fixing Project Scene Structure
+
+### Old
+```yaml
+```
+
+### New
+```yaml
+```
+
+## Generating Docs from Scripts for Godot
+- Just a side note
+- But I recall setting up a docs-generator for Cosmic Engine
+- And one of the annoying quirks of it is it would skip scripts without a `class_name`
+- It really ought to have placed these scripts under a section marked "Singletons" or "Non Instantiables"
+- And the intent is to capture that these are distinct from the normal type-tree of godot, and need to be handled differently
+- (I used [eh_DocsExporter](https://github.com/eh-jogos/eh_DocsExporter), but here are some other articles)
+- [GDScript Docs Maker](https://github.com/GDQuest/gdscript-docs-maker)
+- [GDScriptify](https://github.com/hiulit/GDScriptify)
+- [GodotDoc](https://github.com/Dragoncraft89/godotdoc)
