getting ready for another massive shuffle

--- a/notes/2022-04-18.md
+++ b/notes/2022-04-18.md
@@ -55,7 +55,7 @@ var StarViewerSettings = {
 - [Allow scripts marked with class_name to use their class within the script without causing a cyclic dependency #25252](https://github.com/godotengine/godot/issues/25252)
 
 ## UI Redesign
-- The `UsersStarScreen` and `SearchScreen` should be parented under the `StarView`
+- The `UserStarScreen` and `SearchScreen` should be parented under the `StarView`
 - What is the distinction between the `StarView` and `StarViewer`?
 - True, one does seem to be more oriented around handling UI, whereas the other might be more interested in holding certain settings
 - But why not collapse them into the same entity?
@@ -78,6 +78,7 @@ var StarViewerSettings = {
 - And who should handle `UserStars` networking?
 - Should all networking be handled by `Settings`?
 - Or should `UserSearch` handle its networking and `Star` handle its networking?
+- I am going to pursue the "[Naked Objects](https://en.wikipedia.org/wiki/Naked_objects)" style, and put all the actions on the objects that need those actions
 
 ## Resource Folder Names
 - I like Python's conventions for a lot of things
@@ -123,10 +124,102 @@ var StarViewerSettings = {
 
 ### Old
 ```yaml
+StarViewer: !CustomScene.StarViewer
+	DefaultScene: !CustomScene.DefaultScene
+	StarUser: !CustomScene.StarUser
+	music: !GodotClass.AudioStreamPlayer
+	SearchScreen: !CustomScene.SearchScreen
+	UserStarScreen: !CustomScene.UserStarScreen
+	StarView: !CustomScene.StarView
 ```
 
 ### New
 ```yaml
+StarViewer: !CustomScene.StarViewer # merged with StarView
+	scene: !CustomScene.DefaultScene
+		viewer: !CustomScene.StarUser # ought to rename the class as well - also, is `viewer` a good name? maybe star_camera would be better?
+	music: !GodotClass.AudioStreamPlayer
+	search: !CustomScene.SearchScreen
+	# removed UserStarScreen, superfluous
+```
+
+## Fixing Project Folder Structure
+
+### Old
+```yaml
+starviewer/:
+	app/:
+		concepts/:
+			camera/:
+				StarUser.tscn
+				fps_mouselook.gd
+			star/:
+				Star.tscn
+				star.gd
+			stars/:
+				# not sure what to put here
+			settings/:
+				settings.gd
+				SimpleDictionaryUI.gd
+		ui/:
+			search_screen/:
+				SearchScreen.tscn
+			star_view/:
+				StarView.tscn
+			user_stars_screen/:
+				UserStarsScreen.tscn
+		deployments/:
+			dev/:
+			prod/:
+		scenes/:
+			default/:
+				DefaultScene.tscn
+			tests/:
+		StarViewer.tscn
+	assets/:
+		fonts/:
+		misc/:
+		models/:
+		songs/:
+		sounds/:
+		textures/:
+```
+
+### New
+```yaml
+starviewer/:
+	app/:
+		starviewer/:
+			display_scenes/:
+				default/:
+					default.tscn
+				scene_viewer/:
+					scene_viewer.tscn # from `StarUser`
+				star/:
+					star.tscn
+					star.gd
+			user_search/:
+				user_search.tscn # merged with `stars/`
+			star_viewer.tscn # main scene, merged with `star_view`
+			star_viewer.gd
+		app.gd # autoload, mode flags and so on, as well as asset loading/searching and user stars querying
+	assets/:
+		fonts/:
+		misc/:
+		models/:
+		songs/:
+		sounds/:
+		textures/:
+	utilities/:
+		utilties.gd # autoload
+		simple_dictionary_ui.gd
+		star_viewer_models.gd # instantiated in app.gd
+		star_viewer_textures.gd # instantiated in app.gd
+		star_viewer_users.gd # instantiated in app.gd
+	deployments/:
+		dev/:
+		prod/:
+	tests/: # moved from `scenes/tests`
 ```
 
 ## Generating Docs from Scripts for Godot
@@ -139,3 +232,50 @@ var StarViewerSettings = {
 - [GDScript Docs Maker](https://github.com/GDQuest/gdscript-docs-maker)
 - [GDScriptify](https://github.com/hiulit/GDScriptify)
 - [GodotDoc](https://github.com/Dragoncraft89/godotdoc)
+
+## More Structure Questions
+- Should `star/` be placed inside `display_scenes/`?
+- True, it is only instantiated within a scene
+
+## New Settings Format
+```javascript
+// <StarViewer:settings>
+var StarViewerSettings = {
+	// These are settings used tby the StarViewer app for loading resources.
+	// Please modify for your installation.
+	// These were automatically generated for the `dev` deployment.
+	// `localhost:8005` is arbitrary, if errors in loading exist, check the serving port!
+	// See `starviewer/app/deployments/readme.md` for more information.
+	// This code copyright Creative Commons Attribution 4.0 Public License.
+	app: {
+		mode: "dev"
+	},
+	models: {
+		endpoint: "localhost:8005/models/"
+	},
+	textures:	{
+		endpoint: "localhost:8005/textures/"
+	},
+	users: {
+		endpoint: "localhost:8005/warpzone/stars.json"
+	},
+	semantics: [
+		"2022-04-18",
+		"nullcasting-warpzone-starviewer",
+		"version-1",
+		"CC-BY-4.0",
+		"godot3.4.4",
+		"web-dev"
+	]
+}
+// </StarViewer:settings>
+```
+
+## Should Semantics Only be Allowed to be a String
+- Or should it be allowed to be any valid JSON?
+- What does it mean to mark it as a string?
+
+## 
+
+## 
+
