significant resturcturing and renaming of project components; cleanup and simplify many scripts; docs need to be updated; better json parser

--- a/notes/2022-04-18.md
+++ b/notes/2022-04-18.md
@@ -192,7 +192,7 @@ starviewer/:
 		starviewer/:
 			display_scenes/:
 				default/:
-					default.tscn
+					default_display.tscn
 				scene_viewer/:
 					scene_viewer.tscn # from `StarUser`
 				star/:
