cleanup dictionary; add export template with settings for dev (stil need to add template for prod); remove unused settings.jsons; renamed more files

--- a/notes/2022-04-18.md
+++ b/notes/2022-04-18.md
@@ -270,12 +270,15 @@ var StarViewerSettings = {
 }
 // </StarViewer:settings>
 ```
+- [Custom HTML page for Web export](https://docs.godotengine.org/en/stable/tutorials/platform/customizing_html5_shell.html)
 
 ## Should Semantics Only be Allowed to be a String
 - Or should it be allowed to be any valid JSON?
 - What does it mean to mark it as a string?
 
-## 
+## Further Irritation
+- After all this effort, and still something's not quite going on correctly with loading the JavaScript
+- Erg
 
 ## 
 
